Zmiana z listy na drzewo plików i folderów
Dodatkowo:
- próba implementacji otwierania .webp przy
użyciu WebPWrapper.cs

--- a/OuhmaniaPeopleRecognizer/App.config
+++ b/OuhmaniaPeopleRecognizer/App.config
@@ -11,4 +11,11 @@
       </listeners>
     </trace>
   </system.diagnostics>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="2147483644"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
