--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>OuhmaniaPeopleRecognizer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -71,6 +71,7 @@
     <Compile Include="OuhmaniaModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebPWrapper.cs" />
     <EmbeddedResource Include="BookCreator.resx">
       <DependentUpon>BookCreator.cs</DependentUpon>
     </EmbeddedResource>
