--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -55,6 +55,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPersonDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPersonDialog.Designer.cs">
+      <DependentUpon>AddPersonDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="AppSettings.cs" />
     <Compile Include="BookCreator.cs">
       <SubType>Form</SubType>
@@ -73,6 +79,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebPWrapper.cs" />
+    <EmbeddedResource Include="AddPersonDialog.resx">
+      <DependentUpon>AddPersonDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BookCreator.resx">
       <DependentUpon>BookCreator.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,6 +103,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\AddPersonDialog.datasource" />
     <None Include="Properties\DataSources\Form1.datasource" />
     <None Include="Properties\DataSources\OuhmaniaModel.datasource" />
     <None Include="Properties\Settings.settings">
