--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -58,9 +58,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommandFactory.cs" />
-    <Compile Include="Commands\ICommand.cs" />
-    <Compile Include="Commands\ICommandFactory.cs" />
+    <Compile Include="Commands\Abstraction\CommandFactory.cs" />
+    <Compile Include="Commands\Abstraction\ICommand.cs" />
+    <Compile Include="Commands\Abstraction\ICommandFactory.cs" />
     <Compile Include="Commands\UpdateCategoryCheckboxesCommand.cs" />
     <Compile Include="Commands\LoadCurrentImageCommand.cs" />
     <Compile Include="Commands\LoadImagesCommand.cs" />
@@ -93,7 +93,7 @@
     </Compile>
     <Compile Include="Models\Batch.cs" />
     <Compile Include="Models\LastUserSelection.cs" />
-    <Compile Include="OuhmaniaModel.cs" />
+    <Compile Include="DataModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interfaces\IFileService.cs" />
