--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -59,8 +59,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Abstraction\CommandFactory.cs" />
+    <Compile Include="Commands\Abstraction\Command.cs" />
     <Compile Include="Commands\Abstraction\ICommand.cs" />
     <Compile Include="Commands\Abstraction\ICommandFactory.cs" />
+    <Compile Include="Commands\SaveCurrentPictureSelectionsCommand.cs" />
+    <Compile Include="Commands\SaveDataModelCommand.cs" />
     <Compile Include="Commands\UpdateCategoryCheckboxesCommand.cs" />
     <Compile Include="Commands\LoadCurrentImageCommand.cs" />
     <Compile Include="Commands\LoadImagesCommand.cs" />
@@ -77,7 +80,7 @@
     <Compile Include="Forms\BookCreator.Designer.cs">
       <DependentUpon>BookCreator.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Models\MainWindowViewModel.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Dialogs\FilesNotFoundDialog.cs">
       <SubType>Form</SubType>
@@ -93,13 +96,14 @@
     </Compile>
     <Compile Include="Models\Batch.cs" />
     <Compile Include="Models\LastUserSelection.cs" />
-    <Compile Include="DataModel.cs" />
+    <Compile Include="Models\DataModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interfaces\IFileService.cs" />
     <Compile Include="Services\Interfaces\INotificationService.cs" />
     <Compile Include="Services\NotificationService.cs" />
-    <Compile Include="WebPWrapper.cs" />
+    <Compile Include="Services\WebPWrapper.cs" />
+    <Compile Include="ViewManager\TreeViewManager.cs" />
     <EmbeddedResource Include="Dialogs\AddPersonDialog.resx">
       <DependentUpon>AddPersonDialog.cs</DependentUpon>
     </EmbeddedResource>
