Key binding prototype

--- a/OuhmaniaPeopleRecognizer/App.config
+++ b/OuhmaniaPeopleRecognizer/App.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="OuhmaniaPeopleRecognizer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup> 
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
@@ -18,4 +23,17 @@
       </webServices>
     </scripting>
   </system.web.extensions>
+  <userSettings>
+    <OuhmaniaPeopleRecognizer.Properties.Settings>
+      <setting name="languageOptionToolMenuItem" serializeAs="String">
+        <value>languageToolStripMenuItem</value>
+      </setting>
+      <setting name="languageMenuItemBinding" serializeAs="String">
+        <value>languageToolStripMenuItem</value>
+      </setting>
+      <setting name="exportToDirectoriesMenuItemLabel" serializeAs="String">
+        <value>Stwórz fotoksiążki</value>
+      </setting>
+    </OuhmaniaPeopleRecognizer.Properties.Settings>
+  </userSettings>
 </configuration>
