--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Commands\UpdateCategoryCheckboxesCommand.cs" />
     <Compile Include="Commands\LoadCurrentImageCommand.cs" />
     <Compile Include="Commands\LoadImagesCommand.cs" />
+    <Compile Include="Dialogs\ErrorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ErrorDialog.Designer.cs">
+      <DependentUpon>ErrorDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\AddCategoryDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +79,9 @@
       <DependentUpon>AddCategoryDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="AppSettings.cs" />
+    <EmbeddedResource Include="Dialogs\ErrorDialog.resx">
+      <DependentUpon>ErrorDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\AddCategoryDialog.resx">
       <DependentUpon>AddCategoryDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,6 +91,7 @@
     <Compile Include="Forms\BookCreator.Designer.cs">
       <DependentUpon>BookCreator.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\BirectionalDictionary.cs" />
     <Compile Include="Models\MainWindowViewModel.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Dialogs\FilesNotFoundDialog.cs">
