--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -118,6 +118,7 @@
     <Compile Include="ViewManager\AutosaveManager.cs" />
     <Compile Include="ViewManager\CategoryManager.cs" />
     <Compile Include="ViewManager\FormMenuViewManager.cs" />
+    <Compile Include="ViewManager\Interfaces\IHasSubscribeOnEvents.cs" />
     <Compile Include="ViewManager\LanguageManager.cs" />
     <Compile Include="ViewManager\PictureBoxManager.cs" />
     <Compile Include="ViewManager\TreeViewManager.cs" />
