--- a/OuhmaniaPeopleRecognizer/App.config
+++ b/OuhmaniaPeopleRecognizer/App.config
@@ -32,7 +32,7 @@
         <value>languageToolStripMenuItem</value>
       </setting>
       <setting name="exportToDirectoriesMenuItemLabel" serializeAs="String">
-        <value>Stwórz fotoksiążki</value>
+        <value>Eksportuj</value>
       </setting>
     </OuhmaniaPeopleRecognizer.Properties.Settings>
   </userSettings>
