--- a/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
+++ b/OuhmaniaPeopleRecognizer/OuhmaniaPeopleRecognizer.csproj
@@ -85,11 +85,11 @@
     <EmbeddedResource Include="Dialogs\AddCategoryDialog.resx">
       <DependentUpon>AddCategoryDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <Compile Include="Forms\BookCreator.cs">
+    <Compile Include="Forms\Exporter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\BookCreator.Designer.cs">
-      <DependentUpon>BookCreator.cs</DependentUpon>
+    <Compile Include="Forms\Exporter.Designer.cs">
+      <DependentUpon>Exporter.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\BirectionalDictionary.cs" />
     <Compile Include="Models\MainWindowViewModel.cs" />
@@ -122,8 +122,8 @@
     <Compile Include="ViewManager\LanguageManager.cs" />
     <Compile Include="ViewManager\PictureBoxManager.cs" />
     <Compile Include="ViewManager\TreeViewManager.cs" />
-    <EmbeddedResource Include="Forms\BookCreator.resx">
-      <DependentUpon>BookCreator.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Exporter.resx">
+      <DependentUpon>Exporter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\FilesNotFoundDialog.resx">
       <DependentUpon>FilesNotFoundDialog.cs</DependentUpon>
@@ -133,6 +133,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
